--- a/public/css/styles-prodCart.css
+++ b/public/css/styles-prodCart.css
@@ -1,67 +1,5 @@
-/*Estilo Fernando Carrito*/
-.encabezado {
-    display:flex;
-    position: relative;
-    margin: 4px 6px;
-    padding: 4px;
-  }
-
-  h1.titulares {
-    color: var(--rosa);
-    padding-left:400px;
-}
- 
- table, th, td {
-    border-bottom: 1px solid black;
-    border-collapse: collapse;
-    padding-inline: 60px;
-  }
-
-
-.thead{
-    font-weight: bold;
-    font-size: 18px;
-   }
-
-.tint img{
-    width: 80px;
-    padding: auto;
-    vertical-align: middle;
-    font-size: 10px;
-}
-
-.ttotal {
-    width: 80px;
-    padding: auto;
-    vertical-align: middle;
-    font-weight: bold;
-    font-size: 16px;
-    border: none;
-}
-
-.butons {
-    display: flex;
-    justify-content:right;
-}
-
-.butons button {
-        padding: 8px 12px;
-        margin: 8px;
-        background-color: var(--verde);
-        border: 1px solid var(--verde);
-        font-family: 'Roboto', serif;
-        color: var(--blanco);
-        border-radius: 20px;
-    }
-button:hover {
-    background-color: var(--celeste);
-    border: 1px solid var(--celeste);
-    color: var(--amarillo);
-    }
-
-/*acá termina estilo Fernando*/
-
 /* Estilos universales*/
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -79,7 +17,7 @@ button:hover {
     --negro: #000;
 }
 
-/* Estilos para elementos del header */
+/* Estilos header */
 
 .navbarSuperior {
     display: flex;
@@ -169,206 +107,81 @@ button:hover {
     font-size: 1em;
 }
 
-/* Estilos para elementos del main */
+/*Estilo main Fernando Carrito*/
 
-.banner img {
-    display: flex;
-    max-width: 100%;
-    justify-content: center;
-    margin: 0 auto;
-    padding-top: 3px;
-}
-
-.beneficios {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    align-items: center;
-    text-align: center;
-    padding: 6px;
+.barraSeparacion {
+    background-color: var(--celeste);
+    padding: 14px;
     margin: 0px auto;
-    font-weight: 550;
-    color: var(--gris);
-    max-width: 98%;
-    gap: 1em;
+    max-width: 550;
 }
 
-.slide {
+/*.encabezado {
+    display:flex;
     position: relative;
-    margin-top: 0;
-}
+    margin: 4px 6px;
+    padding: 4px;
+  }*/
 
-.slide-inner {
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    height: auto;
-}
-
-.slide-open:checked+.slide-item {
-    position: static;
-    opacity: 100;
-}
-
-.slide-item {
-    position: absolute;
-    opacity: 0;
-}
-
-.slide-item img {
-    display: block;
-    max-height: 290px;
-    max-width: 100%;
-    margin: 0 auto;
-}
-
-.slide-control {
-    background: var(--celeste);
-    border-radius: 50%;
-    color: var(--blanco);
-    cursor: pointer;
-    display: none;
-    font-size: 30px;
-    height: 25px;
-    line-height: 20px;
-    position: absolute;
-    top: 25%;
+.titulares h1 {
     text-align: center;
-    width: 25px;
-    z-index: 10;
-}
-
-.slide-control.prev {
-    left: 1%;
-}
-
-.slide-control.next {
-    right: 1%;
-}
-
-.slide-control:hover {
-    background: var(--celeste);
-    color: var(--amarillo);
-}
-
-#slide-1:checked~.control-1,
-#slide-2:checked~.control-2,
-#slide-3:checked~.control-3 {
-    display: block;
-}
-
-section {
-    padding: 5px;
-    margin: 5px;
-    text-align: center;
-}
-
-.titulares {
+    margin: 2px;
     color: var(--rosa);
-    padding-bottom: 15px;
+    font-size: 24px;
 }
 
-article {
-    margin: 4px 4px;
-    display: inline-block;
-    position: relative;
-}
-
-.card {
-    background-color: var(--blanco);
-    display: inline-block;
-    max-width: 290px;
-    border: 1px solid var(--verde);
-    margin: 4px 2px;
-}
-
-.card:hover {
-    border: 1px solid var(--celeste);
-}
-
-.card img {
-    width: 100%;
-}
-
-.card-body {
+ table, th, td {
+    border-bottom: 1px solid black;
+    border-collapse: collapse;
     padding: 10px;
-    background-color: var(--blanco);
-    display: inline-block;
-}
+   
+  }
 
-.fa-truck {
-    color: var(--celeste);
-    border: 1px solid var(--celeste);
-    border-radius: 50%;
-    background-color: var(--blanco);
-    position: absolute;
-    left: 11px;
-    top: 11px;
-    display: inline-block;
+.thead{
+    font-weight: bold;
+    font-size: 14px;
+   }
+
+.tint img{
+    width: 80px;
+    padding: auto;
+    vertical-align: middle;
+   }
+
+.ttotal {
+    /*width: 80px;*/
+    padding: auto;
+    vertical-align: middle;
+    font-weight: bold;
     font-size: 16px;
-    padding: 5px;
-    width: 30px;
-    height: 30px;
-    box-sizing: border-box;
+    border: none;
+    height: 40px
 }
 
-.fa-truck:hover {
-    transition: 0.5s;
-    transform: rotate(360deg);
+.imagenCarrito img {
+   max-width: 100px;
+  
 }
 
-.descripciones {
-    font-size: 16px;
-    color: var(--verde);
-    display: block;
-    font-weight: 600;
+.butons {
+    display: flex;
+    justify-content:right;
 }
 
-.descripciones:hover {
-    color: var(--celeste);
-}
-
-.precios {
-    font-size: 16px;
-    font-weight: 600;
-    display: block;
-    width: 100%;
-    text-decoration: line-through;
-    padding: 3px;
-}
-
-.descuentos {
-    font-size: 16px;
-    display: block;
-    width: 100%;
-    padding: 5px;
-}
-
-.descuentos:hover {
-    color: var(--rosa);
-    font-weight: 600;
-}
-
-.card-body button {
-    padding: 8px 12px;
-    margin: 8px;
-    background-color: var(--verde);
-    border: 1px solid var(--verde);
-    font-family: 'Roboto', serif;
-    color: var(--blanco);
-    border-radius: 20px;
-}
-
-.card-body button:hover {
+.butons button {
+        padding: 8px 12px;
+        margin: 8px;
+        background-color: var(--verde);
+        border: 1px solid var(--verde);
+        font-family: 'Roboto', serif;
+        color: var(--blanco);
+        border-radius: 20px;
+    }
+button:hover {
     background-color: var(--celeste);
     border: 1px solid var(--celeste);
     color: var(--amarillo);
-}
-
-.card-body a {
-    text-decoration: none;
-}
-
+    }
 
 
 
@@ -380,40 +193,16 @@ footer {
     font-size: 16px;
 }
 
-.newsletter {
-    display: flex;
-    justify-content: space-around;
-    font-size: 16px;
-    padding: 3px;
-    align-items: center;
-    padding: 3px;
-}
-
-.newsletter input {
-    padding: 6px 8px 7px;
-    font-size: 14px;
-    border: 1px solid var(--blanco);
-    background-color: var(--blanco);
-    color: var(--gris);
-}
-
-.newsletter button {
-    padding: 8px 10px;
-    margin: 8px;
-    background-color: var(--gris);
-    border: 1px solid var(--gris);
-    font-family: 'Roboto', serif;
-    color: var(--blanco);
-}
-
-.newsletter button:hover {
-    color: var(--amarillo)
-}
 
 .enlaces {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+}
+
+.enlaces h4 {
+    
+    text-align: center;
 }
 
 .enlaces a, .legales a {
