--- a/views/index.html
+++ b/views/index.html
@@ -64,14 +64,14 @@
         <div class="banner"><img src="/images/banner2.png"></div>
 
         <div class="beneficios">
-            <div> <img src="/images/tarjetas.svg">
+            <div> <i class="fa-brands fa-cc-visa">  </i><i class="fa-brands fa-cc-mastercard"></i>  <i class="fa-brands fa-cc-amex"></i>
                 <p>Múltiples medios de pago y promociones</p>
 
             </div>
-            <div> <img src="/images/sucursal.svg">
+            <div> <i class="fa-solid fa-store"></i>
                 <p>Retiro con descuentos en cualquiera de nuestras sucursales</p>
             </div>
-            <div> <img src="/images/camion.svg">
+            <div> <i class="fa-solid fa-truck-fast"></i>
                 <p>Envíos en el día para toda CABA y GBA</p>
             </div>
         </div>
