--- a/views/login.html
+++ b/views/login.html
@@ -62,10 +62,12 @@
     <!-- Aquí comienza el main -->
     <main>
 
+        <div class="barraSeparacion"></div>
 
         <div class="formulario login">
 
-            <h2>¡Hola! Completá tus datos para ingresar</h2>
+            <br>
+            <h2>¡Hola! Completá tus datos para ingresar.</h2>
             <br>
             <form method="POST" action="#">
                 <br>
