--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -61,10 +61,13 @@
 
     <!-- Aquí comienza el main -->
     <main>
+
+        <div class="barraSeparacion"></div>
+
         <section>
         <br>
 
-        <h2 class="titulares">Detalles de su producto elegido</h3>
+        <h2 class="titulares">Detalle del producto elegido</h3>
     <article>
         <div class="detail__container">
             <div class="card">
@@ -75,8 +78,11 @@
                         <p class="descripciones">PRO PLAN PERRO ADULTO 15 KG</p>
                     </a>
                     <p class="precios">$8.908</p>
+                    <br>
                     <p class="descuentos"><strong>¡¡ 15% OFF !! : $7572</strong></p>
+                    <br>
                     <label for="Cantidad" class="menu__cantidad">Cantidad:</label>
+                    <br>
                     <select name="Cantidad" id="Cantidad">
                       <option value="1">1</option>
                       <option value="2">2</option>
@@ -84,8 +90,11 @@
                       <option value="4">4</option>
                     </select>
                     <br>
+                    <br>
                     <button>Agregar al carrito</button>
+                    
                 </div>
+                <br>
             <div class="card-body-detail">
                 <div class="cuotas__container">
                         <i class="fa-brands fa-cc-visa"></i>
@@ -95,7 +104,7 @@
                         <p class="descripciones">6 cuotas sin interés <br> Consultar otras promociones bancarias</p>
                 </div>
             </div>
-            <h4 class="titulares">¿Por qué alimentar a mi mascota con Pro Plan Adulto?</h4>
+            <p class="tituloInfoProd">¿Por qué alimentar a mi mascota con Pro Plan Adulto?</p>
             <p class="info__delprod">Creemos que la nutrición es la base de la salud a largo plazo y el punto de partida para una vida increíble de tu mascota.
                 Es por eso que PRO PLAN® es una buena elección para aquellos que desean alimentar a su mascota con una dieta basada en ciencia de vanguardia, arraigada en más de 90 años de resultados probados.
                 Ofrécele a tu mascota todos los nutrientes que necesita con los productos PURINA® PRO PLAN®, formulados con precisión para aprovechar al máximo los ingredientes de alta calidad, brindar una absorción eficiente de nutrientes y beneficios específicos comprobados en cada etapa de su vida, desde ayudar a respaldar la inmunidad en cachorros y gatitos hasta ayudar al bienestar en perros y gatos adultos. Todos nuestros productos ofrecen un gran sabor que les encantará.</p>
@@ -110,7 +119,6 @@
     <!-- Aquí comienza el footer: lista de correo, links de información y redes sociales -->
     <footer>
         <br>
-
         <div class="enlaces">
             <section class="nosotros">
                 <h4>Nosotros</h4>
