--- a/public/css/styles-ProdDetails.css
+++ b/public/css/styles-ProdDetails.css
@@ -1,50 +1,3 @@
-/*Estilos pag Prod Details MARIANO*/
-
-div .detail__container {
-    max-width: 100%;
-}
-
-.card {
-    background-color: var(--blanco);
-    display: inline-block;
-    max-width: 100%;
-    border: 3px solid var(--verde);
-    margin: 6px 6px;
-}
-
-.info__delprod {
-    color: #3c3c3c;
-    padding: 18px;
-    line-height: 1.5em;
-    font-size: 18px;
-    text-align: justify;
-}
-
-.detail_prod__imag{
-    width: auto;
-}
-
-.cuotas__container i {
-    padding: 5px;
-    color: #54A4CB;
-    width: 1.5em;
-    font-size: 30px;
-    display: inline-block;
-}
-
-.menu__cantidad{
-    color: #C9914B;
-    font-family: 'Roboto', serif
-
-}
-
-.descripciones{
-    padding: 5px;
-    margin: 10px;
-}
-
-
-
  /* Estilos universales */
 
  * {
@@ -154,195 +107,83 @@ div .detail__container {
     font-size: 1em;
 }
 
-/* Estilos para elementos del main */
 
-.banner img {
-    display: flex;
-    max-width: 100%;
-    justify-content: center;
-    margin: 0 auto;
-    padding-top: 3px;
-}
+/*Estilos main pag Prod Details MARIANO*/
 
-.beneficios {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    align-items: center;
-    text-align: center;
-    padding: 6px;
+.barraSeparacion {
+    background-color: var(--celeste);
+    padding: 14px;
     margin: 0px auto;
-    font-weight: 550;
-    color: var(--gris);
-    max-width: 98%;
-    gap: 1em;
-}
+    max-width: 550;
 
-.slide {
-    position: relative;
-    margin-top: 0;
 }
-
-.slide-inner {
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    height: auto;
-}
-
-.slide-open:checked+.slide-item {
-    position: static;
-    opacity: 100;
-}
-
-.slide-item {
-    position: absolute;
-    opacity: 0;
-}
-
-.slide-item img {
-    display: block;
-    max-height: 290px;
-    max-width: 100%;
-    margin: 0 auto;
-}
-
-.slide-control {
-    background: var(--celeste);
-    border-radius: 50%;
-    color: var(--blanco);
-    cursor: pointer;
-    display: none;
-    font-size: 30px;
-    height: 25px;
-    line-height: 20px;
-    position: absolute;
-    top: 25%;
-    text-align: center;
-    width: 25px;
-    z-index: 10;
-}
-
-.slide-control.prev {
-    left: 1%;
-}
-
-.slide-control.next {
-    right: 1%;
-}
-
-.slide-control:hover {
-    background: var(--celeste);
-    color: var(--amarillo);
-}
-
-#slide-1:checked~.control-1,
-#slide-2:checked~.control-2,
-#slide-3:checked~.control-3 {
-    display: block;
-}
-
-section {
-    padding: 5px;
-    margin: 5px;
-    text-align: center;
-}
-
 .titulares {
     color: var(--rosa);
     padding-bottom: 15px;
-}
-
-article {
-    margin: 4px 4px;
-    display: inline-block;
-    position: relative;
+    font-size: 24px;
+    text-align: center;
 }
 
 
-
-.card:hover {
-    border: 1px solid var(--celeste);
+div .detail__container {
+    max-width: 100%;
+    
 }
 
-.card img {
-    width: 50%;
-}
-
-
-
-.fa-truck {
-    color: var(--celeste);
-    border: 1px solid var(--celeste);
-    border-radius: 50%;
+.card {
     background-color: var(--blanco);
-    position: absolute;
-    left: 11px;
-    top: 11px;
-    display: inline-block;
-    font-size: 16px;
-    padding: 5px;
-    width: 30px;
-    height: 30px;
-    box-sizing: border-box;
+    max-width: 50%;
+    border: 3px solid var(--verde);
+    margin: 10px 10px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align-last: center;
 }
 
-.fa-truck:hover {
-    transition: 0.5s;
-    transform: rotate(360deg);
-}
-
-.descripciones {
-    font-size: 16px;
+.tituloInfoProd {
     color: var(--verde);
-    display: block;
-    font-weight: 600;
-}
-
-.descripciones:hover {
-    color: var(--celeste);
-}
-
-.precios {
+    padding: 18px;
+    line-height: 1.5em;
     font-size: 16px;
-    font-weight: 600;
-    display: block;
-    width: 100%;
-    text-decoration: line-through;
-    padding: 3px;
+    font-style: normal;
+    text-align: center;
+
 }
 
-.descuentos {
-    font-size: 16px;
-    display: block;
-    width: 100%;
+.info__delprod {
+    color: #3c3c3c;
+    padding: 18px;
+    line-height: 1.5em;
+    font-size: 12px;
+    text-align: justify;
+}
+
+.detail_prod__imag{
+    
+    max-width: 200px;
+}
+
+.cuotas__container i {
     padding: 5px;
+    color: #54A4CB;
+    width: 1.5em;
+    font-size: 25px;
+    display: inline-block;
 }
 
-.descuentos:hover {
-    color: var(--rosa);
-    font-weight: 600;
+.menu__cantidad{
+    color: #C9914B;
+    font-family: 'Roboto', serif
+
 }
 
-.card-body button {
-    padding: 8px 12px;
-    margin: 8px;
-    background-color: var(--verde);
-    border: 1px solid var(--verde);
-    font-family: 'Roboto', serif;
-    color: var(--blanco);
-    border-radius: 20px;
+.descripciones{
+    padding: 5px;
+    margin: 10px;
 }
 
-.card-body button:hover {
-    background-color: var(--celeste);
-    border: 1px solid var(--celeste);
-    color: var(--amarillo);
-}
 
-.card-body a {
-    text-decoration: none;
-}
 
 /* Estilos para el footer */
 
@@ -352,34 +193,8 @@ footer {
     font-size: 16px;
 }
 
-.newsletter {
-    display: flex;
-    justify-content: space-around;
-    font-size: 16px;
-    padding: 3px;
-    align-items: center;
-    padding: 3px;
-}
-
-.newsletter input {
-    padding: 6px 8px 7px;
-    font-size: 14px;
-    border: 1px solid var(--blanco);
-    background-color: var(--blanco);
-    color: var(--gris);
-}
-
-.newsletter button {
-    padding: 8px 10px;
-    margin: 8px;
-    background-color: var(--gris);
-    border: 1px solid var(--gris);
-    font-family: 'Roboto', serif;
-    color: var(--blanco);
-}
-
-.newsletter button:hover {
-    color: var(--amarillo)
+.enlaces h4 {
+    text-align: center;
 }
 
 .enlaces {
