--- a/views/productCart.html
+++ b/views/productCart.html
@@ -61,8 +61,14 @@
 
     <!-- Aquí comienza el main -->
     <main>
+       
+        <div class="barraSeparacion"></div>
         <br>
-        <h1 class="titulares">¡No te pierdas nuestras ofertas!</h1>
+        <div class="titulares" >
+            <h1>Tu carrito de compras</h1>
+        </div>
+        <br>
+        <br>
         <section>
             <article>
                 <div class="table">
@@ -77,9 +83,9 @@
                         <tr>
                             <td class="tint"><a href="./views/productDetail.html"><img src="/images/purinaperro.webp"></a>PURINA DENTALIFE PERRO 119 GR</td>
                             <td>bonificado</td>
-                            <td>$5550</td>
+                            <td>$5.550</td>
                             <td>2</td>
-                            <td>$11100</td>
+                            <td>$11.100</td>
                           </tr>
                           <tr>
                             <td class="tint"><a href="./views/productDetail.html"><img src="/images/proplangato.webp"></a>PRO PLAN GATO ADULTO 7.5 KG</td>
@@ -88,44 +94,31 @@
                             <td>1</td>
                             <td>$8.156</th>
                           </tr>
-                          <tr
-                            <td height="40" class="ttotal"></td>
-                            <td></td>
+                          <tr>
+                            <td class="ttotal"> </td>
                             <td></td>
                             <td></td>
                             <td>TOTAL</td>
-                            <td>$17256</th>
+                            <td>$17.256</th>
                           </tr>
                     </table>
                 </div>
                 <br>
-                <br>
-                <br>
+                <div class="imagenCarrito">
+                <img src="/images/carritoGatito.jpg">
+                </div>
                 <div class="butons">
                 <button>Elegir más productos</button>
                 <button>Finalizar compra</button>
             </div>
             </article>
         </section>
+        <br>
     </main>
 
     <!-- Aquí comienza el footer: lista de correo, links de información y redes sociales -->
     <footer>
         <br>
-        <div class="newsletter">
-            <p><i class="fa-solid fa-envelope">&nbsp</i>Suscríbite para recibir ofertas y novedades:</p>
-
-            <form action="#" method="GET">
-                <input type="text" placeholder="Nombre completo">
-                &nbsp
-                <input type="email" placeholder="Dirección de email">
-                <button type="submit" value="Submit">Enviar</button>
-            </form>
-
-        </div>
-        <br>
-        <br>
-
         <div class="enlaces">
             <section class="nosotros">
                 <h4>Nosotros</h4>
