--- a/views/productCart.html
+++ b/views/productCart.html
@@ -61,10 +61,10 @@
 
     <!-- Aquí comienza el main -->
     <main>
-       
+
         <div class="barraSeparacion"></div>
         <br>
-        <div class="titulares" >
+        <div class="titulares">
             <h1>Tu carrito de compras</h1>
         </div>
         <br>
@@ -72,45 +72,49 @@
         <section>
             <article>
                 <div class="table">
-                     <table width="100%" cellspacing="5" cellpadding="0">
+                    <table width="100%" cellspacing="5" cellpadding="0">
                         <tr class="thead">
-                          <td height="50">PRODUCTO</td>
-                          <td>ENVIO</td>
-                          <td>PRECIO</td>
-                          <td>CANTIDAD</td>
-                          <td>TOTAL</td>
+                            <td height="50">PRODUCTO</td>
+                            <td>ENVIO</td>
+                            <td>PRECIO</td>
+                            <td>CANTIDAD</td>
+                            <td>TOTAL</td>
                         </tr>
                         <tr>
-                            <td class="tint"><a href="./views/productDetail.html"><img src="/images/purinaperro.webp"></a>PURINA DENTALIFE PERRO 119 GR</td>
+                            <td class="tint"><a href="./views/productDetail.html"><img
+                                        src="/images/purinaperro.webp"></a>PURINA DENTALIFE PERRO 119 GR</td>
                             <td>bonificado</td>
                             <td>$5.550</td>
                             <td>2</td>
                             <td>$11.100</td>
-                          </tr>
-                          <tr>
-                            <td class="tint"><a href="./views/productDetail.html"><img src="/images/proplangato.webp"></a>PRO PLAN GATO ADULTO 7.5 KG</td>
+                        </tr>
+                        <tr>
+                            <td class="tint"><a href="./views/productDetail.html"><img
+                                        src="/images/proplangato.webp"></a>PRO PLAN GATO ADULTO 7.5 KG</td>
                             <td>bonificado</td>
                             <td>$8.156</td>
                             <td>1</td>
                             <td>$8.156</th>
-                          </tr>
-                          <tr>
+                        </tr>
+                        <tr>
                             <td class="ttotal"> </td>
                             <td></td>
                             <td></td>
                             <td>TOTAL</td>
                             <td>$17.256</th>
-                          </tr>
+                        </tr>
                     </table>
                 </div>
                 <br>
+                <br>
                 <div class="imagenCarrito">
-                <img src="/images/carritoGatito.jpg">
+                    <img src="/images/carritoGatito.jpg">
                 </div>
+
                 <div class="butons">
-                <button>Elegir más productos</button>
-                <button>Finalizar compra</button>
-            </div>
+                    <button>Elegir más productos</button>
+                    <button>Finalizar compra</button>
+                </div>
             </article>
         </section>
         <br>
