modif posición gatito carrito

--- a/public/css/styles-prodCart.css
+++ b/public/css/styles-prodCart.css
@@ -158,8 +158,17 @@
     height: 40px
 }
 
+.imagenCarrito {
+     display: flex;
+    justify-content:right;
+    padding-right: 20px;
+   
+ }
+
 .imagenCarrito img {
    max-width: 100px;
+   display: flex;
+   justify-content:right;
   
 }
 
