--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
     <!-- Aquí comienza el header: logo, navbars y campo de búsqueda -->
     <header>
         <div class="navbarSuperior">
-            <a href="./views/login.html"><i class="fa-solid fa-user-check"></i> Ingresar</a>
+            <a href="/views/users/login.ejs"><i class="fa-solid fa-user-check"></i> Ingresar</a>
             <p> | </p>
             <a href="./views/register.html"><i class="fa-solid fa-user-plus"></i> Registrarse</a>
             <p> | </p>
