--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -17,47 +17,7 @@
 
 <body>
     <!-- Aquí comienza el header: logo, navbars y campo de búsqueda -->
-    <header>
-        <div class="navbarSuperior">
-            <a href="/views/login.html"><i class="fa-solid fa-user-check"></i> Ingresar</a>
-            <p> | </p>
-            <a href="/views/register.html"><i class="fa-solid fa-user-plus"></i> Registrarse</a>
-            <p> | </p>
-            <a href="#"><i class="fa-solid fa-heart"></i> Favoritos</a>
-            <p> | </p>
-            <a href="/views/productCart.html"><i class="fa-solid fa-cart-shopping"></i> Carrito</a>
-            &nbsp
-        </div>
-
-        <div class="navbarInferior">
-            <div class="logo"><a href="/"><img src="/images/logo.png" alt="Animalia"></a></div>
-
-            <nav class="secciones">
-
-                <ul>
-                    <li><a href="#"><img src="/images/Iconos-Menu-perro.png">
-                            Perros</a></li>
-                    <li><a href="#"><img src="/images/Iconos-Menu-gato.png">
-                            Gatos</a></li>
-                    <li><a href="#"><img src="/images/Iconos-Menu-pajaro.png">
-                            Aves</a></li>
-                    <li><a href="#"><img src="/images/Iconos-Menu-Roedor.png">
-                            Roedores</a></li>
-                    <li><a href="#"><img src="/images/Iconos-Menu-peces.png">
-                            Peces</a></li>
-                    <li><a href="#"><img src="/images/Iconos-Menu-oferta.png">
-                            Ofertas</a></li>
-                </ul>
-
-            </nav>
-
-            <div class="burguer-menu"><i class="fa-solid fa-bars"></i></div>
-
-            <form action="#" method="POST">
-                <input type="search" placeholder="Búsqueda"></input> <i class="fa-solid fa-magnifying-glass"></i>
-            </form>
-        </div>
-    </header>
+    <%- include('partials/header.ejs') %>
 
     <!-- Aquí comienza el main -->
     <main>
@@ -95,55 +55,7 @@
     </main>
 
     <!-- Aquí comienza el footer: lista de correo, links de información y redes sociales -->
-    <footer>
-        <br>
-        <br>
-            <div class="enlaces">
-            <section class="nosotros">
-                <h4>Nosotros</h4>
-                <br>
-                <ul>
-                    <li><a href="#">Quiénes somos</a></li>
-                    <li><a href="#">Contacto</a></li>
-                    <li><a href="#">Sucursales</a></li>
-                </ul>
-            </section>
-
-            <section class="ayuda">
-                <h4>Ayuda</h4>
-                <br>
-                <ul>
-                    <li><a href="#">Medios de pago</a></li>
-                    <li><a href="#">Envios</a></li>
-                </ul>
-            </section>
-
-            <section class="cuenta">
-                <h4>Cuenta</h4>
-                <br>
-                <ul>
-                    <li><a href="#">Mis pedidos</a></li>
-                    <li><a href="#">Seguimiento</a></li>
-                    <li><a href="#">Favoritos</a></li>
-                </ul>
-            </section>
-
-            <section class="redes">
-                <h4>¡Seguínos!</h4>
-                <br>
-                <ul>
-                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                </ul>
-            </section>
-        </div>
-        <br>
-        <div class="legales">
-            <p>&nbsp © Pet Shop Animalia - Lo mejor para tus mascotas.<a href="#">Términos y condiciones</a></p>
-        </div>
-        <br>
-    </footer>
+    <%- include('partials/footer.ejs') %>
 
 </body>
 
