correctiones en tarjetas y cambios con partials

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,7 @@
 
 <header>
     <div class="navbarSuperior">
-        <a href="views/users/login.ejs"><i class="fa-solid fa-user-check"></i> Ingresar</a>
+        <a href="/views/users/login.ejs"><i class="fa-solid fa-user-check"></i> Ingresar</a>
         <p> | </p>
         <a href="views/users/register.ejs"><i class="fa-solid fa-user-plus"></i> Registrarse</a>
         <p> | </p>
