--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -131,25 +131,10 @@
     padding: 6px;
     margin: 0px auto;
     font-weight: 550;
-    color: var(--blanco);
-    max-width: 100%;
+    color: var(--gris);
+    max-width: 98%;
     gap: 1em;
-    background-color: var(--celeste);
-    font-size: 12px;
 }
-
-.beneficios i {
-    font-size: 16px;
-    text-decoration: none;
-    color: var(--blanco);
-    text-align: right;
-    padding: 2px;
-    margin: 3px;
-}
-    
-.beneficios i:hover {
-        color: var(--amarillo);
-    }
 
 .slide {
     position: relative;
@@ -224,7 +209,6 @@ section {
 .titulares {
     color: var(--rosa);
     padding-bottom: 15px;
-    font-size: 25px;
 }
 
 article {
@@ -237,9 +221,8 @@ article {
     background-color: var(--blanco);
     display: inline-block;
     max-width: 290px;
-    border: 2px solid var(--verde);
+    border: 1px solid var(--verde);
     margin: 4px 2px;
-    border-radius: 4px;
 }
 
 .card:hover {
@@ -306,6 +289,26 @@ article {
     text-decoration: none;
 }
 
+.consejo {
+    display: inblock-flex;
+    max-width: 53%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 20px;
+    line-height: 2rem;
+    background-image: url("/images/animals-pattern.jpg");
+    background-size: cover;
+    border-radius: 20px;
+    color: var(--gris);
+    font-weight: bold;
+    border: 1px solid var(--gris);
+}
+
+.consejo img {
+max-width: 33%;
+border-radius: 50%;
+}
+
 /* Estilos para el footer */
 
 footer {
@@ -325,9 +328,9 @@ footer {
 .newsletter input {
     padding: 6px 8px 7px;
     font-size: 14px;
-    border: 1px solid var(--blanco);
+    border: 1px solid var(--verde);
     background-color: var(--blanco);
-    color: var(--gris);
+    color: var(--verde);
 }
 
 .newsletter button {
@@ -394,7 +397,3 @@ footer {
         display: flex;
     }
 }
-
-
-
-
