--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,23 +20,8 @@
     <%- include('partials/header.ejs') %>
 
     <!-- Aquí comienza el main: banner, slider con ofertas, cards de productos y enlaces varios -->
-    <main>
+    <>
         <div class="banner"><img src="/images/banner2.png"></div>
-
-        <div class="beneficios">
-            <div> <i class="fa-brands fa-cc-visa"> </i><i class="fa-brands fa-cc-mastercard"></i> <i
-                    class="fa-brands fa-cc-amex"></i>
-                <p>Múltiples medios de pago y promociones</p>
-
-            </div>
-            <div> <i class="fa-solid fa-store"></i>
-                <p>Retiro con descuentos en cualquiera de nuestras sucursales</p>
-            </div>
-            <div> <i class="fa-solid fa-truck-fast"></i>
-                <p>Envíos en el día para toda CABA y GBA</p>
-            </div>
-        </div>
-        <br>
 
         <div class="slide">
             <div class="slide-inner">
@@ -62,6 +47,22 @@
             </div>
         </div>
         <br>
+
+        <div class="beneficios">
+            <div> <img src="/images/tarjetas.svg">
+                <p>Múltiples medios de pago y promociones</p>
+
+            </div>
+            <div> <img src="/images/sucursal.svg">
+                <p>Retiro con descuentos en cualquiera de nuestras sucursales</p>
+            </div>
+            <div> <img src="/images/camion.svg">
+                <p>Envíos en el día para toda CABA y GBA</p>
+            </div>
+        </div>
+
+        <br>
+
         <section>
             <h3 class="titulares">¡No te pierdas nuestras ofertas!</h3>
 
@@ -179,10 +180,33 @@
 
         </section>
         <br>
-    </main>
+        <div class="newsletter">
+            <p><i class="fa-solid fa-envelope">&nbsp</i>Suscríbite para recibir ofertas y novedades:</p>
 
-    <!-- Aquí comienza el footer: lista de correo, links de información y redes sociales -->
-    <%- include('partials/footer.ejs') %>
+            <form action="#" method="GET">
+                <input type="text" placeholder="Nombre completo">
+                &nbsp
+                <input type="email" placeholder="Dirección de email">
+                <button type="submit" value="Submit">Enviar</button>
+            </form>
+
+        </div>
+
+        <br>
+
+        <div class="consejo">
+            <h3>EL CONSEJO DEL DR. ROMERO</h3>
+            <img src="/images/drromero.jpg">
+            <p> ¨Respetar e incentivar su descanso de la misma manera que uno tiene su propia rutina, los animales
+                también tienen sus tiempos de descanso. Es importante respetarlos en el espacio de convivencia, y que
+                puedan relajarse y recargar energías para poder seguir jugando.¨</p>
+        </div>
+<br>
+<br>
+        </main>
+
+        <!-- Aquí comienza el footer: lista de correo, links de información y redes sociales -->
+        <%- include('partials/footer.ejs') %>
 </body>
 
 </html>
