correccion de error en etiquetas

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
     <%- include('partials/header.ejs') %>
 
     <!-- Aquí comienza el main: banner, slider con ofertas, cards de productos y enlaces varios -->
-    <>
+    <main>
         <div class="banner"><img src="/images/banner2.png"></div>
 
         <div class="slide">
@@ -201,12 +201,12 @@
                 también tienen sus tiempos de descanso. Es importante respetarlos en el espacio de convivencia, y que
                 puedan relajarse y recargar energías para poder seguir jugando.¨</p>
         </div>
-<br>
-<br>
-        </main>
+        <br>
+        <br>
+    </main>
 
-        <!-- Aquí comienza el footer: lista de correo, links de información y redes sociales -->
-        <%- include('partials/footer.ejs') %>
+    <!-- Aquí comienza el footer: lista de correo, links de información y redes sociales -->
+    <%- include('partials/footer.ejs') %>
 </body>
 
 </html>
