cambios en rutas

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,11 +19,11 @@
     <div class="navbarSuperior">
         <a href="/views/users/login.ejs"><i class="fa-solid fa-user-check"></i> Ingresar</a>
         <p> | </p>
-        <a href="views/users/register.ejs"><i class="fa-solid fa-user-plus"></i> Registrarse</a>
+        <a href="/views/users/register.ejs"><i class="fa-solid fa-user-plus"></i> Registrarse</a>
         <p> | </p>
         <a href="#"><i class="fa-solid fa-heart"></i> Favoritos</a>
         <p> | </p>
-        <a href="views/users/cart.ejs"><i class="fa-solid fa-cart-shopping"></i> Carrito</a>
+        <a href="/views/users/cart.ejs"><i class="fa-solid fa-cart-shopping"></i> Carrito</a>
         &nbsp
     </div>
 
