solucionado links vistas

--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,23 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <!-- Metadatos: idiomas, adaptabilidad, estilos, tipografías, iconos y título -->
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/styles-reg.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="icon" href="/images/icon.png">
-    <title>Animalia - Lo mejor para tus mascotas</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-</head>
-
+    <%- include('../partials/head.ejs') %>
 <body>
     <!-- Aquí comienza el header: logo, navbars y campo de búsqueda -->
-    <%- include('partials/header.ejs') %>
+    <%- include('../partials/header.ejs') %>
 
     <!-- Aquí comienza el main FORMULARIO REGISTRO-->
     <main>
@@ -75,7 +61,7 @@
     </main>
 
     <!-- Aquí comienza el footer: lista de correo, links de información y redes sociales -->
-    <%- include('partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 
 </body>
 
