productCreate form y ruta login

--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -67,7 +67,7 @@
             </form>
             <br>
             <br>
-            <p>¿Ya tenés cuenta cuenta con nosotros? <a href="/views/login.html" class="irALogin">Iniciar sesión</a>
+            <p>¿Ya tenés cuenta cuenta con nosotros? <a href="/users/login" class="irALogin">Iniciar sesión</a>
             </p>
             <br>
         </div>
